# to-do

./: Dockerfile  Makefile  main.py  pyproject.toml  to-do-list.json
file_manager/: manager.py
